fix image too small in project view and people container view's flex

--- a/src/people-container/components/PeopleContainer.css
+++ b/src/people-container/components/PeopleContainer.css
@@ -25,14 +25,14 @@
 
 .header {
   display: flex;
-  flex-direction: row;
+  flex-flow: row wrap;
   justify-content: space-between;
 }
 
 .header__headline {
   font-size: 34px;
+  margin: 0 20px 20px 0;
   width: 144px;
-  height: 20px;
   font-style: normal;
   font-stretch: normal;
   line-height: normal;
