--- a/src/project-view/components/ProjectView.css
+++ b/src/project-view/components/ProjectView.css
@@ -56,9 +56,10 @@
 
 .project__image {
   display: block;
-  max-height: 200px;
-  max-width: 80%;
-  margin-top: 12px;
+  width: 100%;
+  object-fit: cover;
+  margin-top: 30px;
+  max-height: 300px;
 }
 
 .container {
